[수정] .collect(Collectors.toList()) -> .toList() 코드 수정